--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "l1-contracts/lib/forge-std"]
 	path = l1-contracts/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "l1-contracts/lib/solmate"]
+	path = l1-contracts/lib/solmate
+	url = https://github.com/transmissions11/solmate
