--- a/apps/execution/Cargo.toml
+++ b/apps/execution/Cargo.toml
@@ -11,6 +11,10 @@ reth-node-api.workspace = true
 reth-node-ethereum.workspace = true
 reth-tracing.workspace = true
 reth-execution-types.workspace = true
+reth-consensus.workspace = true
+reth-evm.workspace = true
+reth-db-common.workspace = true
+reth-config.workspace = true
 
 # alloy
 alloy-sol-types = { workspace = true }
@@ -27,5 +31,8 @@ eyre.workspace = true
 
 [dev-dependencies]
 reth-exex-test-utils.workspace = true
+reth-testing-utils.workspace = true
+reth-chainspec.workspace = true
+rand = "0.8"
 
 tokio.workspace = true
