initial unifi avs contract logic

--- a/l1-contracts/package.json
+++ b/l1-contracts/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "5.0.1",
-    "@openzeppelin/contracts-upgradeable": "5.0.1"
+    "@openzeppelin/contracts-upgradeable": "5.0.1",
+    "eigenlayer-contracts": "https://github.com/Layr-Labs/eigenlayer-contracts.git#1bf4c12",
+    "eigenlayer-middleware": "https://github.com/bxmmm1/eigenlayer-middleware.git#dbf6c1a"
   },
   "devDependencies": {
     "@crytic/properties": "https://github.com/crytic/properties#f1ff61b",
