added register script
1. added register script
2. support operator registry to avs by keystore and password

Signed-off-by: ThreeAndTwo <kaiofzc@gmail.com>

--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "npm": ">=9.8.0"
   },
   "version": "1.0.0",
-  "description": "Bsed Rollup",
-  "scripts": {
-  },
+  "description": "Based Rollup",
+  "scripts": {},
   "keywords": [
     "ethereum",
     "puffer",
@@ -24,9 +23,15 @@
   "license": "ISC",
   "private": true,
   "workspaces": {
-    "packages": ["l1-contracts", "l2-contracts"],
+    "packages": [
+      "l1-contracts",
+      "l2-contracts"
+    ],
     "nohoist": [
       "**/*"
     ]
+  },
+  "dependencies": {
+    "ethers": "^6.13.2"
   }
 }
